fix greedy scrollbar bug in voteit nav

--- a/voteit/core/css/main.css
+++ b/voteit/core/css/main.css
@@ -614,6 +614,28 @@ body.left-fixed-active > .navbar-fixed-top > .container {
   color: #262626;
   background-color: #f5f5f5;
 }
+#fixed-top-nav .container-fluid {
+  display: flex;
+}
+#fixed-top-nav .container-fluid a, #fixed-top-nav .container-fluid ul {
+  flex: 0 0 auto;
+}
+#fixed-top-nav .container-fluid .voteit-nav-header {
+  flex: 1 1 auto;
+}
+
+#ai-nav-header {
+  display: flex;
+}
+#ai-nav-header a {
+  flex: 0 0 auto;
+}
+#ai-nav-header .voteit-nav-header {
+  flex: 1 1 auto;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 .in_meeting #fixed-top-nav {
   height: 90px;
